--- a/blackjack.css
+++ b/blackjack.css
@@ -124,7 +124,7 @@ html {
     margin: 20px 0;
   }
   
-  .score {
+  .points {
     position: relative;
     text-align: center;
     font-family: Gill Sans;
